--- a/components/common/Layout/Layout.module.css
+++ b/components/common/Layout/Layout.module.css
@@ -1,8 +1,5 @@
 .root {
-  @apply h-full mx-auto;
+  @apply bg-primary h-full mx-auto;
   /* even wider maxwidth: 2640px */
   max-width: 1800px;
-
-  background-color: theme("colors.green");
-  color: theme("textColor.base");
 }
